--- a/src/common/common-int-test/src/main/resources/META-INF/ca-container/files/ca-xroad.conf
+++ b/src/common/common-int-test/src/main/resources/META-INF/ca-container/files/ca-xroad.conf
@@ -25,3 +25,10 @@ directory=/home/ca/CA/
 command=/usr/bin/python3 -u /home/ca/CA/ca.py
 user=ca
 autorestart=true
+
+[program:uwsgi]
+directory=/var/www/acme2certifier
+command=/usr/bin/uwsgi --ini /var/www/acme2certifier/acme2certifier.ini
+user=www-data
+group=www-data
+autorestart=true
