--- a/Docker/centralserver/files/cs-xroad.conf
+++ b/Docker/centralserver/files/cs-xroad.conf
@@ -51,3 +51,10 @@ command=/usr/sbin/cron -f
 user=root
 autorestart=true
 
+
+[program:uwsgi]
+directory=/var/www/acme2certifier
+command=/usr/bin/uwsgi --ini /var/www/acme2certifier/acme2certifier.ini
+user=www-data
+group=www-data
+autorestart=true
