--- a/Docker/testca/files/acme_srv.cfg
+++ b/Docker/testca/files/acme_srv.cfg
@@ -14,7 +14,7 @@ issuing_ca_cert: /home/ca/CA/certs/ca.cert.pem
 issuing_ca_crl: /home/ca/CA/crl/ca.crl.pem
 #cert_validity_days: 30
 #cert_validity_adjust: True
-cert_save_path: /home/ca/CA/newcerts/
+cert_save_path: /home/ca/CA/newcerts
 ca_cert_chain_list: ["/home/ca/CA/certs/ca.cert.pem"]
 openssl_conf: /home/ca/CA/CA.cnf
 #allowed_domainlist: ["foo.bar\\$", "foo1.bar.local"]
