--- a/Docker/testca/files/testca.conf
+++ b/Docker/testca/files/testca.conf
@@ -46,3 +46,10 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:uwsgi]
+directory=/var/www/acme2certifier
+command=/usr/bin/uwsgi --ini /var/www/acme2certifier/acme2certifier.ini
+user=www-data
+group=www-data
+autorestart=true
