--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -106,7 +106,7 @@ apache-commonsConfiguration2 = { module = "org.apache.commons:commons-configurat
 apache-httpmime = { module = "org.apache.httpcomponents:httpmime", version = "4.5.14" }
 apache-cxfToolsValidator = { module = "org.apache.cxf:cxf-tools-validator", version = "4.0.4" }
 apache-tikaCore = { module = "org.apache.tika:tika-core", version = "2.9.2" }
-apache-xmlsec = { module = "org.apache.santuario:xmlsec", version = "4.0.2" }
+apache-xmlsec = { module = "org.apache.santuario:xmlsec", version = "3.0.4" } # newer versions are not compatible with DSS
 apache-httpclient = { module = "org.apache.httpcomponents:httpclient", version = "4.5.14" }
 apache-httpasyncclient = { module = "org.apache.httpcomponents:httpasyncclient", version = "4.1.5" }
 apache-httpclient5 = { module = "org.apache.httpcomponents.client5:httpclient5", version = "5.3.1" }
@@ -165,6 +165,7 @@ swagger-annotations-jakarta = { module = "io.swagger.core.v3:swagger-annotations
 websocket-jakarta-server = { module = "org.eclipse.jetty.websocket:websocket-jakarta-server", version.ref = "edcJetty" }
 
 dss-jades = { module = "eu.europa.ec.joinup.sd-dss:dss-jades", version.ref = "dss" }
+dss-xades = { module = "eu.europa.ec.joinup.sd-dss:dss-xades", version.ref = "dss" }
 dss-token = { module = "eu.europa.ec.joinup.sd-dss:dss-token", version.ref = "dss" }
 dss-utils-apache-commons = { module = "eu.europa.ec.joinup.sd-dss:dss-utils-apache-commons", version.ref = "dss" }
 dss-xml-common = { module = "eu.europa.ec.joinup.sd-dss:dss-xml-common", version.ref = "dss" }
