--- a/src/security-server/edc/xroad-edc-security/build.gradle
+++ b/src/security-server/edc/xroad-edc-security/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     api project(':signer-protocol')
 
     api libs.dss.jades
+    api libs.dss.xades
     api libs.dss.token
     api libs.dss.utils.apache.commons
     api libs.dss.xml.common
