feat: separate edc identity hub

--- a/Docker/centralserver/files/cs-xroad.conf
+++ b/Docker/centralserver/files/cs-xroad.conf
@@ -51,10 +51,18 @@ command=/usr/sbin/cron -f
 user=root
 autorestart=true
 
-[program:xroad-edc]
-command=/usr/share/xroad/bin/xroad-edc
+[program:xroad-edc-ih]
+command=/usr/share/xroad/bin/xroad-edc-identity-hub
+user=root
+startsecs=5
+autorestart=true
+priority=250
+stdout_logfile=/var/log/xroad/edc-identity-hub.log
+
+[program:xroad-edc-connector]
+command=/usr/share/xroad/bin/xroad-edc-connector
 user=root
 startsecs=5
 autorestart=true
 priority=300
-stdout_logfile=/var/log/xroad/edc.log
+stdout_logfile=/var/log/xroad/edc-connector.log
