--- a/Docker/securityserver/files/ss-xroad.conf
+++ b/Docker/securityserver/files/ss-xroad.conf
@@ -56,10 +56,19 @@ autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
-[program:xroad-edc]
-command=/usr/share/xroad/bin/xroad-edc
+[program:xroad-edc-ih]
+command=/usr/share/xroad/bin/xroad-edc-identity-hub
+user=root
+startsecs=5
+autorestart=true
+priority=250
+stdout_logfile=/var/log/xroad/edc-identity-hub.log
+
+[program:xroad-edc-connector]
+command=/usr/share/xroad/bin/xroad-edc-connector
 user=root
 startsecs=5
 autorestart=true
 priority=300
-stdout_logfile=/var/log/xroad/edc.log
+stdout_logfile=/var/log/xroad/edc-connector.log
+
