--- a/Docker/xrd-dev-stack/compose.edc.yaml
+++ b/Docker/xrd-dev-stack/compose.edc.yaml
@@ -6,11 +6,12 @@ services:
   cs:
     environment:
       - EDC_HOSTNAME=cs
-      - EDC_DID=did:web:did-server:cs
+      - EDC_DID=did:web:cs%3A9396:cs
       - EDC_DID_KEY_ID=key-id
       - EDC_TLS_CERT_PATH=/etc/xroad/ssl/management-service.p12
     ports:
-      - "4193:9953" #EDC debug
+      - "4193:9953" #EDC connector debug
+      - "4194:9954" #EDC ih debug
       - "4151:9191" #EDC api port
       - "4152:9192" #EDC control port
       - "4153:9193" #EDC management port
@@ -20,10 +21,11 @@ services:
   ss0:
     environment:
       - EDC_HOSTNAME=ss0
-      - EDC_DID=did:web:did-server:ss0
+      - EDC_DID=did:web:ss0%3A9396:ss0
       - EDC_DID_KEY_ID=3D47895272492D2A5950CD3936D89B69374EDB22
     ports:
-      - "4293:9953" #EDC debug
+      - "4293:9953" #EDC connector debug
+      - "4294:9954" #EDC ih debug
       - "4251:9191" #EDC api port
       - "4252:9192" #EDC control port
       - "4253:9193" #EDC management port
@@ -33,27 +35,14 @@ services:
   ss1:
     environment:
       - EDC_HOSTNAME=ss1
-      - EDC_DID=did:web:did-server:ss1
+      - EDC_DID=did:web:ss1%3A9396:ss1
       - EDC_DID_KEY_ID=ABB413254BE603BE8A1C94193041A2D82E8BDF4B
     ports:
-      - "4393:9953" #EDC debug
+      - "4393:9953" #EDC connector debug
+      - "4394:9954" #EDC ih debug
       - "4351:9191" #EDC api port
       - "4352:9192" #EDC control port
       - "4353:9193" #EDC management port
       - "4354:9194" #EDC protocol port
       - "4355:9291" #EDC public port
       - "4356:9293" #EDC XRD public port
-  did-server:
-    image: nginx
-    deploy:
-      resources:
-        reservations:
-          memory: 32M
-        limits:
-          memory: 256M
-    healthcheck:
-      interval: 5s
-      retries: 40
-      test: [ "CMD", "curl", "-f", "-k", "http://localhost/hc" ]
-    volumes:
-      - ./edc-did:/usr/share/nginx/html
