fix: use volume for x-road configuration files
Refs: XRDDEV-2623

--- a/Docker/centralserver/Dockerfile
+++ b/Docker/centralserver/Dockerfile
@@ -88,4 +88,5 @@ COPY files/cs-entrypoint.sh /root/entrypoint.sh
 COPY --chown=root:root files/cs-xroad.conf /etc/supervisor/conf.d/xroad.conf
 CMD ["/root/entrypoint.sh"]
 
+VOLUME /etc/xroad
 EXPOSE 4000 2222
