feat: Trying to get IATP to work with Gaia-X verifiable credentials

--- a/Docker/securityserver/files/edc/etc/edc-connector.properties
+++ b/Docker/securityserver/files/edc/etc/edc-connector.properties
@@ -1,5 +1,4 @@
-edc.participant.id=did:web:localhost
-
+edc.participant.id=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com
 web.http.port=9191
 web.http.path=/api
 web.http.management.port=9193
@@ -24,9 +23,10 @@ edc.dataplane.token.validation.endpoint=https://localhost:9192/control/token
 edc.http.client.https.enforce=true
 
 ### IAM ###
-edc.iam.issuer.id=did:web:localhost
-edc.iam.sts.privatekey.alias=alias_localhost
-edc.iam.sts.publickey.id=did:web:localhost#key-id
+edc.iam.issuer.id=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com
+edc.iam.sts.privatekey.alias=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com
+edc.iam.sts.publickey.id=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com#DE9DH3UqFQpV64LraOgqmMFSgTIlk6K1BnfU2k5vBfs
+
 
 edc.iam.did.web.use.https=true
 
