--- a/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
@@ -18,6 +18,10 @@ edc.iam.issuer.id=did:web:localhost
 edc.iam.sts.privatekey.alias=alias_localhost
 edc.iam.did.web.use.https=true
 
+# Support for JSON-LD (verifiable credentials)
+edc.jsonld.https.enabled=true
+edc.jsonld.http.enabled=true
+
 # Identity Hub
 edc.ih.iam.id=did:web:localhost
 edc.ih.iam.publickey.alias=did:web:localhost
