feat: Working IATP with all of the 4 Gaia-X VCs

--- a/Docker/securityserver/files/edc/etc/edc-configuration.properties
+++ b/Docker/securityserver/files/edc/etc/edc-configuration.properties
@@ -28,7 +28,8 @@ edc.iam.sts.privatekey.alias=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com
 edc.iam.sts.publickey.id=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com#DE9DH3UqFQpV64LraOgqmMFSgTIlk6K1BnfU2k5vBfs
 
 edc.iam.trusted-issuer.member1.id=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com
-edc.iam.trusted-issuer.gx.id=did:web:gx-compliance.i.x-road.rocks:main
+edc.iam.trusted-issuer.gx-compliance.id=did:web:gx-compliance.i.x-road.rocks:main
+edc.iam.trusted-issuer.gx-notary.id=did:web:gx-notary.i.x-road.rocks:main
 
 edc.agent.identity.key=https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#clientId
 
