--- a/src/common/common-domain/build.gradle
+++ b/src/common/common-domain/build.gradle
@@ -98,6 +98,23 @@ tasks.register('xjc') {
             binding: 'src/main/resources/identifiers-bindings.xml'
         )
 
+
+        // Generate classes for federateable global external conf v4
+        ant.xjc(
+            destdir: project.ext.schemaTargetDir,
+            package: 'ee.ria.xroad.common.conf.globalconf.sharedparameters.v4',
+            schema: 'src/main/resources/globalconf/v4/shared-parameters.xsd',
+            binding: 'src/main/resources/identifiers-bindings.xml'
+        )
+
+        // Generate classes for global internal conf v4
+        ant.xjc(
+            destdir: project.ext.schemaTargetDir,
+            package: 'ee.ria.xroad.common.conf.globalconf.privateparameters.v4',
+            schema: 'src/main/resources/globalconf/v4/private-parameters.xsd',
+            binding: 'src/main/resources/identifiers-bindings.xml'
+        )
+
     }
 }
 
