--- a/src/central-server/admin-service/application/src/main/resources/application.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application.yml
@@ -15,8 +15,7 @@ spring:
       hibernate:
         id:
           db_structure_naming_strategy: legacy #TODO Migrate to newer strategies
-        dialect_resolvers: >
-          ee.ria.xroad.common.db.Postgres10FixedImplicitSequenceDialectResolver
+        dialect: ee.ria.xroad.common.db.Postgres10FixedImplicitSequenceDialect
   profiles:
     include: nontest
   jackson:
