chore: Bump EDC to 0.6.2

--- a/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
@@ -9,13 +9,13 @@ web.http.protocol.path=/protocol
 web.http.did.path=/
 web.http.did.port=9396
 web.http.resolution.path=/resolution
-web.http.resolution.port=20002
+web.http.resolution.port=20001
 
 edc.http.client.https.enforce=true
 
 ### IAM ###
 edc.iam.issuer.id=did:web:localhost
-edc.iam.sts.privatekey.alias=alias_localhost
+edc.iam.sts.privatekey.alias=did:web:localhost
 edc.iam.did.web.use.https=true
 
 # Support for JSON-LD (verifiable credentials)
@@ -25,3 +25,8 @@ edc.jsonld.http.enabled=true
 # Identity Hub
 edc.ih.iam.id=did:web:localhost
 edc.ih.iam.publickey.alias=did:web:localhost
+
+edc.agent.identity.key=https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#clientId
+
+# X-Road custom props
+edc.ih.credentials.path=/etc/xroad-edc/credentials
