--- a/Docker/securityserver/files/edc/etc/edc-connector.properties
+++ b/Docker/securityserver/files/edc/etc/edc-connector.properties
@@ -1,4 +1,4 @@
-edc.participant.id=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com
+edc.participant.id=did:web:localhost
 web.http.port=9191
 web.http.path=/api
 web.http.management.port=9193
@@ -14,8 +14,8 @@ web.http.control.port=9192
 web.http.control.path=/control
 
 edc.dsp.callback.address=https://localhost:9194/protocol
-edc.transfer.dataplane.token.signer.privatekey.alias=alias_localhost
-edc.transfer.proxy.token.signer.privatekey.alias=alias_localhost
+edc.transfer.dataplane.token.signer.privatekey.alias=did:web:localhost
+edc.transfer.proxy.token.signer.privatekey.alias=did:web:localhost
 edc.transfer.proxy.token.verifier.publickey.alias=did:web:localhost
 
 edc.dataplane.token.validation.endpoint=https://localhost:9192/control/token
@@ -23,12 +23,17 @@ edc.dataplane.token.validation.endpoint=https://localhost:9192/control/token
 edc.http.client.https.enforce=true
 
 ### IAM ###
-edc.iam.issuer.id=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com
-edc.iam.sts.privatekey.alias=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com
-edc.iam.sts.publickey.id=did:web:xroad-8-member1.s3.eu-west-1.amazonaws.com#DE9DH3UqFQpV64LraOgqmMFSgTIlk6K1BnfU2k5vBfs
+edc.iam.issuer.id=did:web:localhost
+#TODO switch to d
+#edc.iam.sts.privatekey.alias=alias_localhost
+#edc.iam.sts.publickey.id=did:web:localhost#key-id
+edc.iam.sts.privatekey.alias=did:web:localhost
+edc.iam.sts.publickey.id=did:web:localhost#key-id
 
 
 edc.iam.did.web.use.https=true
+
+edc.agent.identity.key=https://registry.lab.gaia-x.eu/development/api/trusted-shape-registry/v1/shapes/jsonld/trustframework#clientId
 
 # Support for JSON-LD (verifiable credentials)
 edc.jsonld.https.enabled=true
