--- a/src/security-server/edc/extensions/xroad-identity-and-trust/build.gradle
+++ b/src/security-server/edc/extensions/xroad-identity-and-trust/build.gradle
@@ -6,16 +6,13 @@ dependencies {
     implementation libs.edc.boot
     implementation libs.edc.policy.engine.spi
 
-    implementation(libs.edc.identity.trust.core) {
-        exclude group: 'org.eclipse.edc', module: 'verifiable-credentials' // we use our own fork of it to customize validation rules
-        exclude group: 'org.eclipse.edc', module: 'ldp-verifiable-credentials' // we use our own fork of it in order to verify Gaia-X signatures
-    }
-    //    implementation libs.edc.identity.trust.transform  // we use our own fork to allow "evidence" property in the Gaia-x compliance VC
+    implementation(libs.edc.identity.trust.core)
+        {
+            exclude group: 'org.eclipse.edc', module: 'verifiable-credentials' // we use our own fork of it to customize validation rules
+            exclude group: 'org.eclipse.edc', module: 'ldp-verifiable-credentials'
+            // we use our own fork of it in order to verify Gaia-X signatures
+        }
 
-    implementation libs.edc.identity.hub.credentials
-    implementation libs.edc.identity.hub.credentials
-    implementation libs.edc.identity.hub.store.spi
-    implementation libs.edc.identity.hub.api
     implementation libs.edc.jersey.providers.lib
     implementation libs.edc.transform.lib
     implementation libs.edc.crypto.common.lib
@@ -29,4 +26,9 @@ dependencies {
         add("implementation", "com.apicatalog:titanium-json-ld:1.4.0")
         add("implementation", "io.setl:rdf-urdna:1.3")
     }
+}
+
+checkstyle {
+    checkstyleMain.enabled = false
+    checkstyleTest.enabled = false
 }
