--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -98,6 +98,8 @@ include "common:common-test"
 include "addons:hwtoken"
 include "addons:messagelog:messagelog-protocol"
 include "addons:messagelog:messagelog-addon"
+include "addons:messagelog:messagelog-addon:asic"
+include "addons:messagelog:messagelog-addon:core"
 include "addons:messagelog:messagelog-archiver"
 include 'addons:messagelog:messagelog-archive-verifier'
 include "addons:messagelog:messagelog-db"
