chore: logging to messagelog. work in progress

--- a/Docker/centralserver/files/edc/etc/edc-connector.properties
+++ b/Docker/centralserver/files/edc/etc/edc-connector.properties
@@ -30,6 +30,7 @@ edc.jsonld.https.enabled=true
 edc.jsonld.http.enabled=true
 
 # x-Road configuration
+xroad.messagelog.enabled=true
 
 # Federated catalog
 edc.catalog.cache.execution.delay.seconds=5
